# nutr

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Doxyfile.in  README.md  bibliography.bib  entry_point.sh  format.sh
src/angular_correlation/: AlphavCoefficient.cc  AngCorrRejectionSampler.cc  AngularCorrelation.cc  AvCoefficient.cc  CMakeLists.txt  EulerAngleRotation.cc  EvCoefficient.cc  FCoefficient.cc  KappaCoefficient.cc  SphereIntegrator.cc  SpherePointSampler.cc  SphereRejectionSampler.cc  UvCoefficient.cc  W_dir_dir.cc  W_pol_dir.cc  test_Ev_coefficient.cc  test_Uv_coefficient.cc  test_angular_correlation.cc  test_angular_correlation_io.cc  test_elliptic_integral.cc  test_euler_angle_rotation.cc  test_f_coefficient.cc  test_find_Theta_j.cc  test_find_c.cc  test_kappa_coefficient.cc  test_normalization.cc  test_plots_tgl.cc  test_plots_tpolymarker3d.cc  test_sphere_integrator.cc  test_sphere_rejection_sampler.cc  test_spiral_segment.cc  test_unobserved.cc  test_upper_limit.cc  test_w_dir_dir.cc  test_w_pol_dir.cc
src/angular_correlation/python/: angular_correlation.py  angular_correlation_plot.py  asymmetry_plot.py  level_scheme_plotter.py  state.py  test_plot_02_mixing_single_asy.py  test_plot_03_mixing_elastic_asy.py  test_plot_04_mixing_inelastic_asy.py  test_plot_05_0p_1p_2_asy.py  test_plot_06_0p_1p_3_asy.py  test_plot_07_0p_2p_1_asy.py  test_plot_08_0p_2p_2_asy.py  test_plot_09_0p_2p_3_asy.py  test_plot_10_0p_2p_4_asy.py  test_plot_11_0.5p_2.5p_0.5_asy.py  test_plot_12_1.5p_1.5p_1.5_asy.py  test_plot_13_1.5p_2.5p_1.5_asy.py  test_plot_14_1.5p_3.5p_1.5_asy.py  test_plot_15_2.5p_1.5p_2.5_asy.py  test_plot_16_2.5p_2.5p_2.5_asy.py  test_plot_17_2.5p_3.5p_2.5_asy.py  test_plot_18_2.5p_4.5p_2.5_asy.py  test_plot_19_0_1_1_0_asy.py  test_plot_20_0_2_2_0_asy.py  test_plots_mixing_double.py  test_plots_mixing_single.py  test_plots_patterns.py  transition.py
src/detectors/: CMakeLists.txt  CeBr3_15x15.cc  CeBr3_2x2.cc  Detector.cc  DetectorChannelMessenger.cc  Filter_Case.cc  HPGe_Clover.cc  HPGe_Coaxial.cc  LaBr3Ce_3x3.cc  MOLLY.cc  NaI.cc  Scintillator_SCIONIX.cc
src/fundamentals/: ActionInitialization.cc  CMakeLists.txt  NutrMessenger.cc  nutr.cc
src/fundamentals/analysis/: CMakeLists.txt  TupleManager.cc
src/fundamentals/primary_generator/angular_correlation_source/: AngularCorrelation.cc  CMakeLists.txt  EulerAngleRotation.cc  FCoefficient.cc  KappaCoefficient.cc  PrimaryGeneratorAction.cc  SpherePointSampler.cc  UvCoefficient.cc  W_dir_dir.cc  W_pol_dir.cc  test_Ev_coefficient.cc  test_Uv_coefficient.cc  test_angular_correlation_io.cc  test_euler_angle_rotation.cc  test_find_Theta_j.cc  test_find_c.cc  test_normalization.cc  test_plots_matplotlib.py.in  test_plots_tgl.cc  test_plots_tpolymarker3d.cc  test_sphere_integrator.cc  test_unobserved.cc  test_w_dir_dir.cc  test_w_pol_dir.cc  w_dir_dir.py.in
src/fundamentals/primary_generator/angular_distribution_source/: CMakeLists.txt
src/fundamentals/primary_generator/general_particle_source/: CMakeLists.txt  PrimaryGeneratorAction.cc
src/geometry/: CMakeLists.txt  DetectorConstruction.cc  NDetectorConstruction.cc  NDetectorConstructionMessenger.cc  SourceVolume.cc  SourceVolumeTubs.cc
src/geometry/clover/: CMakeLists.txt  DetectorConstruction.cc
src/geometry/clover_array/: CMakeLists.txt  DetectorConstruction.cc
src/geometry/clover_array/02_16_2021_to_04_10_2021/: CMakeLists.txt  DetectorConstruction.cc  Makefile  fill_histograms.cpp
src/geometry/clover_array/04_19_2021_to_04_30_2021/: CMakeLists.txt  DetectorConstruction.cc
src/geometry/clover_array/2021-02-16_to_2021-04-10/: CMakeLists.txt  DetectorConstruction.cc
src/geometry/clover_array/2021-04-19_to_2021-04-30/: CMakeLists.txt  DetectorConstruction.cc
src/geometry/clover_array/2021-05-07_to_2021-05-30/: CMakeLists.txt  DetectorConstruction.cc
src/geometry/clover_array/2021-08-23/: CMakeLists.txt  DetectorConstruction.cc
src/geometry/clover_array/2021-08-24_to_2021-08-25/: CMakeLists.txt  DetectorConstruction.cc
src/geometry/clover_array/2021-08-25_to_2021-08-27/: CMakeLists.txt  DetectorConstruction.cc
src/geometry/clover_array/2021-08-28_to_2021-09-09/: CMakeLists.txt  DetectorConstruction.cc  DetectorConstructionMessenger.cc
src/geometry/clover_array/2021-09-09_to_2021-10-10/: CMakeLists.txt  CoaxB4Config.hh.in  DetectorConstruction.cc  DetectorConstructionConfig.hh.in
src/geometry/clover_array/2021-11-08_to_2021-11-21/: CMakeLists.txt  DetectorConstruction.cc
src/geometry/clover_array/2022-01-21_to_2022-02-05/: CMakeLists.txt  DetectorConstruction.cc
src/geometry/clover_array/2022-02-07_to_2022-02-15/: CMakeLists.txt  DetectorConstruction.cc
src/geometry/clover_array/2022-02-21_to_2022-03-02/: CMakeLists.txt  (+1 more)
src/geometry/hpge/: CMakeLists.txt  DetectorConstruction.cc
src/geometry/materials/: CMakeLists.txt  CeBr3.cc  LaBr3Ce.cc  PLA.cc
src/geometry/nai/: CMakeLists.txt  DetectorConstruction.cc
src/geometry/scintillator/: CMakeLists.txt  DetectorConstruction.cc
src/physics/: CMakeLists.txt  Physics.cc  Physics.cc.in
src/primary_generator/angcorr/: AvCoefficient.cc  CMakeLists.txt  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  W_dir_dir.cc  W_pol_dir.cc  test_find_c.cc  test_kappa_coefficient.cc  test_plots_tgl.cc  test_plots_tpolymarker3d.cc  test_upper_limit.cc  test_w_dir_dir.cc
src/sensitive_detector/: AnalysisManager.cc  CMakeLists.txt  NDetectorHit.cc  NEventAction.cc  NEventAction.cc.in  NRunAction.cc  NSensitiveDetector.cc
src/sensitive_detector/edep/: CMakeLists.txt  DetectorHit.cc  EventAction.cc  RunAction.cc  SensitiveDetector.cc  TupleManager.cc
src/sensitive_detector/event/: CMakeLists.txt  DetectorHit.cc  EventAction.cc  RunAction.cc  SensitiveDetector.cc  TupleManager.cc
src/sensitive_detector/flux/: CMakeLists.txt  DetectorHit.cc  EventAction.cc  RunAction.cc  SensitiveDetector.cc  TupleManager.cc
src/sensitive_detector/tracker/: CMakeLists.txt  DetectorHit.cc  EventAction.cc  RunAction.cc  SensitiveDetector.cc  TrackerHit.cc  TrackerSD.cc  TupleManager.cc
(+266 files in other folders)
